src/test/resources/semantic/reject/assignmentWithoutDeclLiteral.ul
void main() {
}

void foo() {
    int foo;
    bar = 50;
}
